# ClientServerRepo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  game_db.sql  game_db_120.sql  game_db_160.sql  game_db_20.sql  game_db_40.sql  game_db_80.sql  logFilesRemover.sh  maps  projectMaker.sh  runClients.sh  setup_env.sh  test_db.sql  wrlinb.test
client/: CMakeLists.txt  client.sdf  client.sln  echoserver.sh  global.makefile  makefile
client/Debug/: client.ilk
client/client/: Client.cpp  Client.hpp  CommunicationService.cpp  CommunicationService.hpp  Console.cpp  Console.hpp  ICommunicationService.hpp  IMessageActor.hpp  IMessageQueue.hpp  IMessageWriter.hpp  ITcpSocket.hpp  MessageQueue.cpp  MessageQueue.hpp  MessageWriter.cpp  MessageWriter.hpp  Server.cpp  Server.h  Session.cpp  Session.h  SharedVariable.cpp  SharedVariable.hpp  TcpSocket.cpp  TcpSocket.hpp  ThreadFactory.hpp  client.vcxproj  client.vcxproj.filters  main.cpp  makefile
client/client/Debug/: vc120.idb
client/src/: CMakeLists.txt  Client.cpp  Client.hpp  CommunicationService.cpp  CommunicationService.hpp  FilePositionWriter.cpp  FilePositionWriter.hpp  ICommunicationService.hpp  IKeyboardController.hpp  ILoginService.hpp  IMessageCommander.hpp  IMessageQueue.hpp  IMessageWriter.hpp  IMovementManager.hpp  IWorldUpdater.hpp  KeyGetter.cpp  KeyboardController.cpp  KeyboardController.hpp  LoginService.cpp  LoginService.hpp  MessageQueue.cpp  MessageQueue.hpp  MessageReader.cpp  MessageReader.hpp  MessageWriter.cpp  MessageWriter.hpp  MovementManager.cpp  MovementManager.hpp  NetworkMessage.hpp  TcpSocket.cpp  TcpSocket.hpp  WorldUpdater.cpp  WorldUpdater.hpp  client.vcxproj.filters  clientMain.cpp  main.cpp  makefile  predictionMain.cpp
client/src/model/: CMakeLists.txt  IObjectsFacade.hpp  ObjectsFacade.cpp  ObjectsFacade.hpp  ala.sublime-project  ala.sublime-workspace
client/src/model/objects/: Object.cpp  Object.hpp  PlayerObject.cpp  PlayerObject.hpp  StoneObject.cpp  StoneObject.hpp
client/src/prediction/: CMakeLists.txt  DeadReckoning.cpp  DeadReckoning.hpp  DirectionChooseFunctions.cpp  DirectionChooseFunctions.hpp  DistanceFunctions.cpp  DistanceFunctions.hpp  KNeighborsFinder.cpp  KNeighborsFinder.hpp  KNeighborsFinderBuilder.cpp  KNeighborsFinderBuilder.hpp  PredictionAssistant.cpp  PredictionAssistant.hpp  PredictionDefinitions.hpp  Records.cpp  Records.hpp
client/src/view/: CMakeLists.txt  EventListener.cpp  EventListener.hpp  GameWindow.cpp  GameWindow.hpp  IGameWindow.hpp  IModelPainter.hpp  ModelPainter.cpp  ModelPainter.hpp
client/ut/: CMakeLists.txt  ClientTest.cpp  CommunicationServiceMock.hpp  CommunicationServiceTest.cpp  KeyboardControllerTest.cpp  MessageActorMock.hpp  MessageQueueMock.hpp  MessageQueueTest.cpp  MessageReaderTest.cpp  MessageWriterTest.cpp  MovementManagerTest.cpp  TcpSocketMock.hpp  WorldUpdaterTest.cpp  clientTestMain.cpp  main.cpp  makefile  ut.vcxproj  ut.vcxproj.filters
client/ut/mocks/: CommunicationServiceMock.hpp  GameWindowMock.hpp  KeyGetterMock.hpp  KeyboardControllerMock.hpp  MessageCommanderMock.hpp  MessageQueueMock.hpp  MessageWriterMock.hpp  MovementManagerMock.hpp  ObjectsFacadeMock.hpp  TcpSocketMock.hpp  WorldUpdaterMock.hpp
client/ut/prediction/: CMakeLists.txt  DirectionChooseFunctionsTest.cpp  DistanceFunctionsTest.cpp
client/ut/stubs/: MessageCommanderStub.hpp  MessageQueueStub.hpp  TcpSocketStub.hpp
client/ut/utilities/: CommunicationServiceSutBuilder.hpp
cmake_modules/: FindBOX2D.cmake
common/: CMakeLists.txt
common/maps/: CMakeLists.txt  IMapContainer.hpp  MapContainer.cpp  MapContainer.hpp
common/messages/: CMakeLists.txt  CurrentPlayerPosition.hpp  Login.hpp  Logout.hpp  MessageTypes.hpp  MessageUtilities.cpp  MessageUtilities.hpp  Messages.hpp  NoChanges.hpp  OkResponse.hpp  UpdateEnvironment.hpp  UpdatePlayer.hpp  Updateplayer.hpp
common/socketServices/: CMakeLists.txt  IMessageQueue.hpp  ITcpSocket.hpp  MessageQueue.cpp  MessageQueue.hpp  MessageReader.cpp  MessageReader.hpp  MessageWriter.cpp  MessageWriter.hpp  TcpSocket.cpp  TcpSocket.hpp
common/socketServices/ut/: CMakeLists.txt  MessageQueueTest.cpp  MessageWriterTest.cpp  main.cpp
common/utilities/: CMakeLists.txt  Console.cpp  Console.hpp  ITcpSocket.hpp  NotImplementedException.hpp  TcpSocket.cpp  TcpSocket.hpp  ThreadSafeObject.hpp
docs/: CmakePresentation.md  cmake_cheatsheet.md  targetDefs.md
longTimeLogs/: calcResult.py
maps/: main.tmx
pred_logs/: position_karol1.pred  position_karol2.pred  position_marcin.pred  position_mateusz.pred  position_slawek.pred  results.xlsx
server/: CMakeLists.txt  db_connector.py  game_db  main.py  server.py  test_client.py
server/simpleClient/: CMakeLists.txt  Client.cpp  Client.hpp  CommunicationService.cpp  CommunicationService.hpp  IKeyGetter.hpp  KeyGetter.cpp  KeyGetter.hpp  KeyboardController.hpp  clientMain.cpp
server/src/: AcceptorWrapper.cpp  AcceptorWrapper.hpp  BoostWrapper.cpp  BoostWrapper.hpp  CMakeLists.txt  IAcceptorWrapper.hpp  IBoostWrapper.hpp  IIoServiceWrapper.hpp  IServerInitializer.hpp  IServerSession.hpp  ISocketServicesWrapper.hpp  IoServiceWrapper.cpp  IoServiceWrapper.hpp  Server.cpp  Server.hpp  ServerInitializer.cpp  ServerInitializer.hpp  ServerMain.cpp  ServerSession.cpp  ServerSession.hpp  ServerSocket.cpp  ServerSocket.hpp  SocketServicesWrapper.cpp  SocketServicesWrapper.hpp  serverMain.cpp
server/src/echoServer/: CMakeLists.txt  ServerSession.cpp
server/src/fullServer/: CMakeLists.txt  ServerSession.cpp
server/src/modules/database/: CMakeLists.txt  IDatabaseWrapper.hpp  MysqlDatabaseWrapper.cpp  MysqlDatabaseWrapper.hpp
server/ut/: CMakeLists.txt  EchoServerSessionTests.cpp  FullServerSessionTests.cpp  MysqlDatabaseWrapperTests.cpp  ServerInitializerTest.cpp  ServerInitializerTests.cpp  ServerSessionTests.cpp  SocketServicesWrapperTests.cpp  main.cpp
server/ut/mocks/: AcceptorWrapperMock.hpp  BoostWrapperMock.hpp  DatabaseWrapperMock.hpp  IoServiceWrapperMock.hpp  SocketServicesWrapperMock.hpp
serverLogs/: calcResult.py
(+9 files in other folders)
